#40 Fixed invalid content error for users without unfiltered_html permission

--- a/css/accordion-blocks.scss
+++ b/css/accordion-blocks.scss
@@ -79,6 +79,12 @@ $color-open-icon: #777;
 	}
 }
 
+[data-initially-open="false"] {
+	.c-accordion__content {
+		display: none;
+	}
+}
+
 // Make all the content visible when printing the page.
 @media print {
 	.c-accordion__content {
