--- a/src/block/editor.scss
+++ b/src/block/editor.scss
@@ -6,6 +6,10 @@
 	> div {
 		padding: 0;
 	}
+
+	button {
+		width: 36px !important;
+	}
 }
 
 // The dropdown already has a border, so we can remove the one on the
@@ -16,18 +20,8 @@
 
 .editor-styles-wrapper {
 	.c-accordion__item {
-		&:after {
-			display: block;
-			content: "";
-			width: 100%;
-			height: 1px;
-			margin: 0 auto;
-		}
-
 		&.is-selected {
-			&:after {
-				background-color: var(--wp-admin-theme-color);
-			}
+			border-bottom: 1px solid var(--wp-admin-theme-color) !important;
 		}
 	}
 }
