rewrite front js in vanilla - Fix #121 add alignment support - Fix #103
use hidden until-found - Fix #161

Remove the use of children - Maybe Fix #117

add resize event dispatch - Fix #59

revert removal of the button option

use <accordion-item> custom element
add js documentation
requestIdleCallback before window scroll

remove use of "window."

--- a/src/block/editor.scss
+++ b/src/block/editor.scss
@@ -4,4 +4,8 @@
 			border-bottom: 1px solid var(--wp-admin-theme-color) !important;
 		}
 	}
+
+	.c-accordion__content {
+		display: block !important;
+	}
 }
